add_subdirectory(drishti)

# if(DRISHTI_USE_THREAD_POOL_CPP)
#   add_subdirectory(thread-pool)
# endif()

# add_subdirectory(json)

# if(DRISHTI_USE_BEAST)
#   add_subdirectory(beast)
# endif()

# if(DRISHTI_BUILD_ASAN_TEST)
#   add_subdirectory(address-sanitizer)
# endif()

# # visual test
# if(DRISHTI_USE_IMSHOW)
#   add_subdirectory(glfwimshow)
# endif()

# if(${DRISHTI_DO_GPU_TESTING} AND DRISHTI_BUILD_OGLES_GPGPU)
#   add_subdirectory(ogles_gpgpu)
# endif()
